--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,5 @@
-cmake_minimum_required(VERSION 3.30.5)
+# cmake_minimum_required(VERSION 3.30.5)
+cmake_minimum_required(VERSION 3.29.5)
 
 # Add subdirectory to point to the actual project CMakeLists.txt
 add_subdirectory(mcca)
